--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://gitname.github.io/intrack-movie-app",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
